--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,13 @@ body {
   overflow-x: hidden;
 }
 
-ul a {
-  display: inline-block;
+ .ul a {
+  /* display: inline-block; */
   position: relative;
   cursor: pointer;
 }
 
-ul a::before {
+ .ul a::before {
   content: "";
   position: absolute;
   width: 0;
@@ -34,30 +34,30 @@ ul a::before {
   transition: all 0.3s ease-in-out;
 }
 
-ul a:hover::before {
+ .ul a:hover::before {
   width: 100%;
 }
 
-ul a.active::before{
+ .ul a.active::before{
   width: 100%;
 }
-ul a.active{
+ .ul a.active{
   color: #fff;
 }
 
 @media (max-width : 767px) {
   
-  ul a::before {
+   .ul a::before {
     bottom: 0;
     left: 0;
     transform: translateX(0);
   }
 
-  ul a:hover::before {
+   .ul a:hover::before {
     width: 1.5rem;
   }
   
-  ul a.active::before{
+   .ul a.active::before{
     width: 1.5rem;
   }
 }
